--- a/styles/sass/layout/_lecture_schedule.scss
+++ b/styles/sass/layout/_lecture_schedule.scss
@@ -187,10 +187,11 @@
 
         &.noon-center {
           stroke: white;
+          stroke-width: 1px;
         }
 
         &.noon-outline {
-          stroke-width: 6px;
+          stroke-width: 5px;
         }
       }
 
